--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/p5": "^0.9.1",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
