--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "apexcharts": "^3.22.0",
     "p5": "^1.1.9",
     "vue": "^3.0.0",
+    "vue-apexcharts": "^1.6.0",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
