--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@mdi/font": "^5.8.55",
     "apexcharts": "^3.22.0",
     "autoprefixer": "^9",
+    "chart.js": "^2.9.4",
     "p5": "^1.1.9",
     "postcss": "^7",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^3.0.0",
     "vue-apexcharts": "^1.6.0",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^4.0.0-0",
     "vue-slider-component": "^4.0.0-beta.2"
   },
